--- a/config
+++ b/config
@@ -37,29 +37,40 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPause exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
+bindsym $mod+Shift+Return exec konsole
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start rofi (a program launcher)
 # bindsym $mod+s exec --no-startup-id dmenu_run
-bindsym $mod+s exec rofi -show run -lines 3 -eh 2 -opacity "85"
+bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -opacity "85"
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+#bindsym $mod+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+n focus left
-bindsym $mod+e focus down
-bindsym $mod+i focus up
-bindsym $mod+o focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -68,10 +79,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+n move left
-bindsym $mod+Shift+e move down
-bindsym $mod+Shift+i move up
-bindsym $mod+Shift+o move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -80,18 +91,18 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+Shift+v split h
 
 # split in vertical orientation
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+t fullscreen toggle
+bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+r layout stacking
+bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+f layout toggle split
+bindsym $mod+t layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -117,6 +128,21 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
+#monitor variables
+set $mainDisplay eDP-1
+set $secDisplay HDMI-1
+
+# Setup workspace
+workspace $ws1 output $mainDisplay
+workspace $ws2 output $mainDisplay
+workspace $ws3 output $secDisplay
+workspace $ws4 output $secDisplay
+workspace $ws5 output $mainDisplay
+workspace $ws6 output $mainDisplay
+workspace $ws7 output $mainDisplay
+workspace $ws8 output $mainDisplay 
+workspace $ws9 output $mainDisplay
+workspace $ws10 output $mainDisplay
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -143,42 +169,48 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 #open file manager (dolphin)
-bindsym $mod+F1 exec xdg-open ~
+bindsym $mod+F2 exec xdg-open ~
 # open firefox
-bindsym $mod+F2 exec firefox
+bindsym $mod+F3 exec firefox
+# open neovim
+bindsym $mod+F1 exec alacritty -e nvim
+bindsym $mod+x exec alacritty -e nvim
 # open vs code
 bindsym $mod+c exec code
 # open sublime-text
-bindsym $mod+x exec subl
+#bindsym $mod+x exec subl
 #open firefox dev edition
-bindsym $mod+F3 exec firefox-developer-edition
+#bindsym $mod+F3 exec firefox-developer-edition
 # open dolphin
 bindsym $mod+F5 exec dolphin
 # open telegram 
 bindsym $mod+F8 exec telegram-desktop
 # open mail client (thunderbird)
-bindsym $mod+F9 exec thunderbird
-# open  music player (clementine)
-bindsym $mod+F10 exec clementine
+bindsym $mod+F9 exec mailspring
+# open  music player (elise)
+bindsym $mod+F10 exec elisa
 
 #assign programs to workspaces
 for_window [class="Code"] move to workspace $ws1
+for_window [class="nvim-qt"] move to workspace $ws1
 for_window [class="Sublime_text"] move to workspace $ws1
-for_window [class="firefox"] move to workspace $ws2
+for_window [class="konsole"] move to workspace $ws2
+for_window [class="firefox"] move to workspace $ws3
+for_window [class="vlc"] move to workspace $ws4
 for_window [class="firefoxdeveloperedition"] move to workspace $ws3
 for_window [class="dolphin"] move to workspace $ws5
-for_window [class="konsole"] move to workspace $ws4
+for_window [class="kdeconnect-app"] move to workspace $ws6
 for_window [class="systemsettings"] move to workspace $ws7
 for_window [class="TelegramDesktop"] move to workspace $ws8
-for_window [instance="Mail"] move to workspace $ws9
+for_window [instance="mailspring"] move to workspace $ws9
 for_window [class="kmail2"] move to workspace $ws9
-for_window [class="Clementine"] move to workspace $ws10
+for_window [class="elisa"] move to workspace $ws10
 
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+p restart
+bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 # bindsym $mod+Shift+f exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
@@ -190,10 +222,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym n resize shrink width 10 px or 10 ppt
-        bindsym e resize grow height 10 px or 10 ppt
-        bindsym i resize shrink height 10 px or 10 ppt
-        bindsym o resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -204,10 +236,10 @@ mode "resize" {
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+p mode "default"
+        bindsym $mod+r mode "default"
 }
 
-bindsym $mod+p mode "resize"
+bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -221,6 +253,7 @@ for_window [window_role="task_dialog"] floating enable
 for_window [class="yakuake"] floating enable
 # for_window [class="systemsettings"] floating enable
 for_window [class="plasmashell"] floating enable;
+for_window [class="plasmawindowed"] floating enable;
 for_window [class="Plasma"] floating enable; border none
 for_window [title="plasma-desktop"] floating enable; border none
 for_window [title="win7"] floating enable; border none
@@ -233,12 +266,12 @@ for_window [class="plasmashell" window_type="notification"] border none, move ri
 no_focus [class="plasmashell" window_type="notification"]
 for_window [title="Desktop — Plasma"] kill; floating enable; border none
 # using plasma's logout screen instead of i3's
-bindsym $mod+Shift+f exec --no-startup-id qdbus org.kde.ksmserver /KSMServer org.kde.KSMServerInterface.logout -1 -1 -1
+bindsym $mod+Shift+e exec --no-startup-id qdbus org.kde.ksmserver /KSMServer org.kde.KSMServerInterface.logout -1 -1 -1
 
 # color theme
-set $bg-color 	         #2f343f
+set $bg-color 	         #ff5252
 set $inactive-bg-color   #2f343f
-set $text-color          #f3f4f5
+set $text-color          #2f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
 
@@ -251,7 +284,7 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 
 smart_gaps on
 gaps inner 10
-gaps outer 10
+gaps outer 0
 
 # bar {
 #   status_command i3status
@@ -267,12 +300,13 @@ gaps outer 10
 #		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 #	}
 #}
-#exec_always --no-startup-id picom -bc
+exec_always --no-startup-id picom --experimental-backends
+exec_always --no-startup-id /home/ab/cloned/i3-alternating-layout/alternating_layouts.py
 # screen layout (main)
-exec_always xrandr --output eDP1 --mode 1366x768 --pos 0x1080 --rotate normal --output DP1 --off --output HDMI1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output VGA1 --off --output VIRTUAL1 --off
+#exec_always xrandr --output eDP1 --mode 1366x768 --pos 0x1080 --rotate normal --output DP1 --off --output HDMI1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output VGA1 --off --output VIRTUAL1 --off
 
 # removing the title bar on everything
-default_border pixel 1
+default_border pixel 1 
 default_floating_border pixel 1
 font pango: DejaVu Sans Mono 0
 
@@ -295,10 +329,15 @@ exec xdg-open ~
 exec telegram-desktop
 
 # open mail client on startup
-exec thunderbird
+exec mailspring
 
 # open music player on startup
-exec clementine
+exec elisa
 
 # change the wallpaper
-exec_always feh --bg-scale Pictures/wallpaper3.png
+exec_always feh --bg-scale Pictures/wallpaper.jpg
+
+# remove plasma's wallpaper and dock
+exec_always killall plasmashell
+exec_always killall latte-dock
+
