--- a/config
+++ b/config
@@ -95,7 +95,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+Shift+v split h
+bindsym $mod+Shift+v exec $HOME/.config/i3/alternateMode.py
 
 # split in vertical orientation
 # bindsym $mod+v split v
@@ -285,11 +285,11 @@ for_window [title="Desktop — Plasma"] kill; floating enable; border none
 bindsym $mod+Shift+e exec --no-startup-id qdbus org.kde.ksmserver /KSMServer org.kde.KSMServerInterface.logout -1 -1 -1
 
 # color theme
-set $bg-color 	         #ff5252
-set $inactive-bg-color   #2f343f
-set $text-color          #2f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
+set $bg-color             #89b4fa
+set $inactive-bg-color    #1e1e2e
+set $text-color           #bac2de
+set $inactive-text-color  #7f849c
+set $urgent-bg-color      #f38ba8
 
 # window colors
 #                       border              background         text                 indicator
@@ -299,7 +299,7 @@ client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-col
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #000000
 
 smart_gaps on
-gaps inner 10
+gaps inner 5
 gaps outer 0
 
 # bar {
@@ -317,7 +317,7 @@ gaps outer 0
 #	}
 #}
 # exec_always --no-startup-id picom --config=$HOME/.config/picom-inactive-window-blur.conf
-exec_always --no-startup-id picom --config=$HOME/.config/picom-inactive-window-blur.conf
+exec_always --no-startup-id picom --config=$HOME/.config/picom.conf
 exec_always --no-startup-id ~/random/i3-alternating-layout/alternating_layouts.py
 # screen layout (main)
 #exec_always xrandr --output eDP1 --mode 1366x768 --pos 0x1080 --rotate normal --output DP1 --off --output HDMI1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output VGA1 --off --output VIRTUAL1 --off
