--- a/config
+++ b/config
@@ -352,7 +352,7 @@ exec mailspring
 # exec elisa
 
 # change the wallpaper
-exec_always feh --bg-scale Pictures/wallpaper.*
+exec_always feh --bg-center Pictures/wallpaper.*
 
 # remove plasma's wallpaper and dock
 exec_always killall plasmashell
