--- a/config
+++ b/config
@@ -177,7 +177,8 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 #open file manager (dolphin)
 bindsym $mod+F2 exec xdg-open ~
 # open firefox
-bindsym $mod+F3 exec firefox
+# bindsym $mod+F3 exec firefox
+bindsym $mod+F3 exec firefox-nightly
 # open neovim
 bindsym $mod+F1 exec alacritty -e nvim
 bindsym $mod+x exec alacritty -e nvim
